<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="70dp"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_vertical_0.044"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.044" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_vertical_0.147"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.147" />

            <LinearLayout
                android:id="@+id/bus_search_select_linearLayout"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/bus_search_bus_departure_spinner"
                    android:layout_width="90dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/spinner_no_border"
                    android:entries="@array/bus_place"
                    android:overlapAnchor="false"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="에서"
                    android:textAppearance="@style/TextAppearance.Koin.Regular"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <Spinner
                    android:id="@+id/bus_search_bus_arrival_spinner"
                    android:layout_width="90dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/spinner_no_border"
                    android:entries="@array/bus_place"
                    android:lineSpacingExtra="9sp"
                    android:overlapAnchor="false"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="갑니다"
                    android:textAppearance="@style/TextAppearance.Koin.Regular"
                    android:textColor="@color/black"
                    android:textSize="20sp" />


            </LinearLayout>


            <FrameLayout
                android:id="@+id/bus_search_date_frameLayout"
                android:layout_width="match_parent"
                android:layout_height="31dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bus_search_select_linearLayout">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:alpha="0.2"
                    android:background="@color/blue1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center"
                    android:layout_marginStart="16dp"
                    android:text="날짜 선택"
                    android:textAppearance="@style/TextAppearance.Koin.Regular.13"
                    android:textColor="@color/gray9"/>
            </FrameLayout>


            <LinearLayout
                android:id="@+id/bus_search_date_layout"
                android:layout_width="match_parent"
                android:layout_height="92dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bus_search_date_frameLayout">

                <TextView
                    android:id="@+id/bus_timetable_search_date_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:lineSpacingExtra="9sp"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    tools:text="오늘 - 3월 24일 (일)" />

                <ImageButton
                    android:id="@+id/bus_timetable_search_date_imageButton"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="16dp"
                    android:background="@drawable/ic_calendar" />

            </LinearLayout>

            <FrameLayout
                android:id="@+id/bus_search_time_frameLayout"
                android:layout_width="match_parent"
                android:layout_height="31dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/bus_search_date_layout">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:alpha="0.2"
                    android:background="@color/blue1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center"
                    android:layout_marginStart="16dp"
                    android:text="시간 선택"
                    android:textAppearance="@style/TextAppearance.Koin.Regular.13"
                    android:textColor="@color/gray9" />
            </FrameLayout>

            <LinearLayout
                android:id="@+id/bus_search_time_layout"
                android:layout_width="match_parent"
                android:layout_height="168dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bus_search_time_frameLayout">

                <TimePicker
                    android:id="@+id/bus_search_timePicker"
                    android:layout_width="match_parent"
                    android:layout_height="168dp"
                    android:amPmTextColor="@color/black"
                    android:numbersTextColor="@color/black"
                    android:textAppearance="@style/TextAppearance.Koin.Regular.15"
                    android:theme="@style/KAPTimePicker"
                    android:timePickerMode="spinner"
                    app:layout_constraintStart_toStartOf="parent" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_vertical_0.158"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.158" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_vertical_0.956"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.9586375" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_vertical_0.767"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.76642334" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_horizontal_0.956"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.956" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0.2"
                android:background="@color/blue1" />

            <TextView
                android:id="@+id/bus_timetable_search_fragment_information_textview"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:gravity="center_vertical"
                android:text=""
                android:textAppearance="@style/TextAppearance.Koin.Medium.15"
                android:textColor="@color/colorAccent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/bus_timetable_search_fragment_search_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="2019 /3 /24 오후 3시 55분" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bus_timetable_search_fragment_search_button"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/colorAccent"
                android:elevation="0dp"
                android:gravity="center"
                android:stateListAnimator="@null"
                android:text="조회"
                android:textAppearance="@style/TextAppearance.Koin.Regular.15"
                android:textColor="@color/white"
                app:layout_constrainedWidth="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHeight_percent="0.43"
                app:layout_constraintLeft_toRightOf="@id/guideline_vertical_0.767"
                app:layout_constraintRight_toRightOf="@id/guideline_vertical_0.956"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

